--- a/playground/package.json
+++ b/playground/package.json
@@ -1,4 +1,8 @@
 {
   "private": true,
-  "name": "my-module-playground"
+  "name": "my-module-playground",
+  "dependencies": {
+    "@quasar/extras": "^1.13.6",
+    "quasar": "^2.6.6"
+  }
 }
