--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "quasar-nuxt",
+  "name": "nuxt-quasar-vite",
   "version": "0.1.0",
   "license": "MIT",
   "type": "module",
@@ -21,12 +21,15 @@
     "dev:prepare": "nuxt-module-build --stub && nuxi prepare playground"
   },
   "dependencies": {
-    "@nuxt/kit": "^3.0.0-rc.2"
+    "@nuxt/kit": "^3.0.0-rc.2",
+    "@quasar/vite-plugin": "^1.0.9"
   },
   "devDependencies": {
     "@nuxt/module-builder": "latest",
     "@nuxtjs/eslint-config-typescript": "latest",
     "eslint": "latest",
-    "nuxt": "^3.0.0-rc.2"
+    "nuxt": "^3.0.0-rc.2",
+    "quasar": "^2.6.6",
+    "sass": "1.32.0"
   }
 }
