--- a/package.json
+++ b/package.json
@@ -23,8 +23,7 @@
     "dev:prepare": "nuxt-module-build --stub && nuxi prepare playground"
   },
   "dependencies": {
-    "@nuxt/kit": "^3.0.0-rc.2",
-    "@quasar/vite-plugin": "^1.0.9"
+    "@nuxt/kit": "^3.0.0-rc.2"
   },
   "devDependencies": {
     "@nuxt/module-builder": "latest",
