--- a/playground/package.json
+++ b/playground/package.json
@@ -3,6 +3,7 @@
   "name": "quasar-nuxt-playground",
   "dependencies": {
     "@quasar/extras": "^1.13.6",
-    "quasar": "^2.6.6"
+    "quasar": "^2.6.6",
+    "sass": "1.32.0"
   }
 }
