--- a/package.json
+++ b/package.json
@@ -27,8 +27,8 @@
   },
   "devDependencies": {
     "@nuxt/module-builder": "latest",
-    "@nuxtjs/eslint-config-typescript": "latest",
-    "eslint": "latest",
+    "@nuxtjs/eslint-config-typescript": "^11.0.0",
+    "eslint": "^8.23.1",
     "nuxt": "^3.0.0-rc.4"
   },
   "author": {
