--- a/package.json
+++ b/package.json
@@ -26,10 +26,10 @@
     "@nuxt/kit": "^3.0.0-rc.2"
   },
   "devDependencies": {
-    "@nuxt/module-builder": "latest",
+    "@nuxt/module-builder": "^0.2.0",
     "@nuxtjs/eslint-config-typescript": "^11.0.0",
     "eslint": "^8.23.1",
-    "nuxt": "^3.0.0-rc.4"
+    "nuxt": "^3.0.0-rc.12"
   },
   "author": {
     "email": "romeo@mendezfuentes.net",
