--- a/package.json
+++ b/package.json
@@ -27,9 +27,10 @@
   },
   "devDependencies": {
     "@nuxt/module-builder": "^0.2.0",
+    "@nuxt/schema": "^3.0.0-rc.13",
     "@nuxtjs/eslint-config-typescript": "^11.0.0",
     "eslint": "^8.23.1",
-    "nuxt": "^3.0.0-rc.12"
+    "nuxt": "^3.0.0-rc.13"
   },
   "author": {
     "email": "romeo@mendezfuentes.net",
