--- a/package.json
+++ b/package.json
@@ -20,17 +20,26 @@
     "dev": "nuxi dev playground",
     "dev:build": "nuxi build playground",
     "dev:generate": "nuxi generate playground",
-    "dev:prepare": "nuxt-module-build --stub && nuxi prepare playground"
+    "dev:prepare": "nuxt-module-build --stub && nuxi prepare playground",
+    "release": "npm run prepack && changelogen --release && npm publish && git push --follow-tags",
+    "lint": "eslint .",
+    "test": "vitest run",
+    "test:watch": "vitest watch"
   },
   "dependencies": {
-    "@nuxt/kit": "^3.0.0-rc.2"
+    "@nuxt/kit": "^3.5.2"
   },
   "devDependencies": {
-    "@nuxt/module-builder": "^0.2.0",
-    "@nuxt/schema": "^3.0.0-rc.13",
-    "@nuxtjs/eslint-config-typescript": "^11.0.0",
-    "eslint": "^8.23.1",
-    "nuxt": "^3.0.0-rc.14"
+    "@types/node": "^18",
+    "@nuxt/devtools": "latest",
+    "@nuxt/eslint-config": "^0.1.1",
+    "@nuxt/module-builder": "^0.4.0",
+    "@nuxt/schema": "^3.5.2",
+    "@nuxt/test-utils": "^3.5.1",
+    "changelogen": "^0.5.3",
+    "eslint": "^8.42.0",
+    "nuxt": "^3.5.1",
+    "vitest": "^0.31.4"
   },
   "author": {
     "email": "romeo@mendezfuentes.net",
