--- a/playground/package.json
+++ b/playground/package.json
@@ -3,7 +3,8 @@
   "name": "quasar-nuxt-playground",
   "dependencies": {
     "@quasar/extras": "^1.16.4",
+    "nuxt": "^3.9.0",
     "quasar": "^2.12.0",
-    "sass": "1.32.12"
+    "sass": "^1.69.5"
   }
 }
