--- a/playground/package.json
+++ b/playground/package.json
@@ -3,8 +3,10 @@
   "name": "quasar-nuxt-playground",
   "dependencies": {
     "@quasar/extras": "^1.16.4",
-    "nuxt": "^3.9.0",
-    "quasar": "^2.12.0",
+    "quasar": "^2.16.2",
     "sass": "^1.69.5"
+  },
+  "devDependencies": {
+    "nuxt": "^3.11.2"
   }
 }
