--- a/package.json
+++ b/package.json
@@ -25,20 +25,18 @@
     "test": "vitest run",
     "test:watch": "vitest watch"
   },
-  "dependencies": {
-    "@nuxt/kit": "^3.13.2"
-  },
   "devDependencies": {
-    "@nuxt/devtools": "^1.6.0",
-    "@nuxt/eslint-config": "^0.6.0",
+    "@nuxt/devtools": "^1.7.0",
+    "@nuxt/eslint-config": "^0.7.5",
+    "@nuxt/kit": "^3.15.1",
     "@nuxt/module-builder": "^0.8.4",
-    "@nuxt/schema": "^3.13.2",
-    "@nuxt/test-utils": "^3.14.3",
-    "@types/node": "^22.7.6",
+    "@nuxt/schema": "^3.15.1",
+    "@nuxt/test-utils": "^3.15.1",
+    "@types/node": "^22.10.5",
     "changelogen": "^0.5.7",
-    "eslint": "^9.13.0",
-    "nuxt": "^3.13.2",
-    "vitest": "^2.1.3"
+    "eslint": "^9.17.0",
+    "nuxt": "^3.15.1",
+    "vitest": "^2.1.8"
   },
   "author": {
     "email": "romeo@mendezfuentes.net",
@@ -61,5 +59,5 @@
     "quasar": "^2.16.2",
     "sass": "^1.69.5"
   },
-  "packageManager": "pnpm@9.12.2+sha512.22721b3a11f81661ae1ec68ce1a7b879425a1ca5b991c975b074ac220b187ce56c708fe5db69f4c962c989452eee76c82877f4ee80f474cebd61ee13461b6228"
+  "packageManager": "pnpm@9.15.3"
 }
