--- a/package.json
+++ b/package.json
@@ -20,23 +20,29 @@
     "dev": "nuxi dev playground",
     "dev:build": "nuxi build playground",
     "dev:prepare": "nuxt-module-build build --stub && nuxt-module-build prepare && nuxi prepare playground",
-    "release": "pnpm prepack && pnpm changelogen --release && pnpm publish && git push --follow-tags",
+    "release": "pnpm run lint && pnpm run test && pnpm run prepack && changelogen --release && pnpm publish && git push --follow-tags",
     "lint": "eslint .",
     "test": "vitest run",
-    "test:watch": "vitest watch"
+    "test:watch": "vitest watch",
+    "test:types": "vue-tsc --noEmit && cd playground && vue-tsc --noEmit"
+  },
+  "dependencies": {
+    "@nuxt/kit": "^3.16.0"
   },
   "devDependencies": {
-    "@nuxt/devtools": "^1.7.0",
-    "@nuxt/eslint-config": "^0.7.5",
-    "@nuxt/kit": "^3.15.1",
+    "@nuxt/devtools": "^2.2.1",
+    "@nuxt/eslint-config": "^1.2.0",
     "@nuxt/module-builder": "^0.8.4",
-    "@nuxt/schema": "^3.15.1",
-    "@nuxt/test-utils": "^3.15.1",
-    "@types/node": "^22.10.5",
-    "changelogen": "^0.5.7",
-    "eslint": "^9.17.0",
-    "nuxt": "^3.15.1",
-    "vitest": "^2.1.8"
+    "@nuxt/schema": "^3.16.0",
+    "@nuxt/test-utils": "^3.17.2",
+    "@types/node": "latest",
+    "changelogen": "^0.6.1",
+    "eslint": "^9.22.0",
+    "globby": "^14.1.0",
+    "nuxt": "^3.16.0",
+    "typescript": "~5.8.2",
+    "vitest": "^3.0.8",
+    "vue-tsc": "^2.2.8"
   },
   "author": {
     "email": "romeo@mendezfuentes.net",
