--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "dev": "nuxi dev playground",
     "dev:build": "nuxi build playground",
     "dev:prepare": "nuxt-module-build build --stub && nuxt-module-build prepare && nuxi prepare playground",
-    "release": "pnpm run prepack && changelogen --release && pnpm publish && git push --follow-tags",
+    "release": "pnpm run prepack && changelogen --bump && pnpm publish && git push --follow-tags",
     "lint": "eslint .",
     "test": "vitest run",
     "test:watch": "vitest watch",
