--- a/package.json
+++ b/package.json
@@ -6,12 +6,18 @@
   "type": "module",
   "exports": {
     ".": {
-      "import": "./dist/module.mjs",
-      "require": "./dist/module.cjs"
+      "types": "./dist/types.d.mts",
+      "import": "./dist/module.mjs"
     }
   },
-  "main": "./dist/module.cjs",
-  "types": "./dist/types.d.ts",
+  "main": "./dist/module.mjs",
+  "typesVersions": {
+    "*": {
+      ".": [
+        "./dist/types.d.mts"
+      ]
+    }
+  },
   "files": [
     "dist"
   ],
@@ -26,22 +32,20 @@
     "test:watch": "vitest watch",
     "test:types": "vue-tsc --noEmit && cd playground && vue-tsc --noEmit"
   },
-  "dependencies": {
-    "@nuxt/kit": "^3.16.0"
-  },
   "devDependencies": {
-    "@nuxt/devtools": "^2.2.1",
-    "@nuxt/eslint-config": "^1.2.0",
-    "@nuxt/module-builder": "^0.8.4",
-    "@nuxt/schema": "^3.16.0",
-    "@nuxt/test-utils": "^3.17.2",
+    "@nuxt/devtools": "^2.4.0",
+    "@nuxt/eslint-config": "^1.3.0",
+    "@nuxt/kit": "^3.17.2",
+    "@nuxt/module-builder": "^1.0.1",
+    "@nuxt/schema": "^3.17.2",
+    "@nuxt/test-utils": "^3.18.0",
     "@types/node": "latest",
     "changelogen": "^0.6.1",
-    "eslint": "^9.22.0",
-    "nuxt": "^3.16.0",
-    "typescript": "~5.8.2",
-    "vitest": "^3.0.8",
-    "vue-tsc": "^2.2.8"
+    "eslint": "^9.26.0",
+    "nuxt": "^3.17.2",
+    "typescript": "~5.8.3",
+    "vitest": "^3.1.3",
+    "vue-tsc": "^2.2.10"
   },
   "author": {
     "email": "romeo@mendezfuentes.net",
@@ -64,5 +68,5 @@
     "quasar": "^2.16.2",
     "sass": "^1.69.5"
   },
-  "packageManager": "pnpm@9.15.3"
+  "packageManager": "pnpm@10.10.0+sha512.d615db246fe70f25dcfea6d8d73dee782ce23e2245e3c4f6f888249fb568149318637dca73c2c5c8ef2a4ca0d5657fb9567188bfab47f566d1ee6ce987815c39"
 }
