--- a/package.json
+++ b/package.json
@@ -40,10 +40,13 @@
     "@nuxt/module-builder": "^1.0.1",
     "@nuxt/schema": "^3.17.2",
     "@nuxt/test-utils": "^3.18.0",
+    "@quasar/extras": "^1.16.17",
     "@types/node": "latest",
     "changelogen": "^0.6.1",
     "eslint": "^9.26.0",
     "nuxt": "^3.17.2",
+    "quasar": "^2.18.1",
+    "sass": "^1.87.0",
     "typescript": "~5.8.3",
     "vitest": "^3.1.3",
     "vue-tsc": "^2.2.10"
