--- a/package.json
+++ b/package.json
@@ -34,22 +34,22 @@
     "test:types": "vue-tsc --noEmit && cd playground && vue-tsc --noEmit"
   },
   "devDependencies": {
-    "@nuxt/devtools": "^2.6.2",
-    "@nuxt/eslint-config": "^1.8.0",
-    "@nuxt/kit": "^4.0.3",
+    "@nuxt/devtools": "^3.1.0",
+    "@nuxt/eslint-config": "^1.10.0",
+    "@nuxt/kit": "^4.2.1",
     "@nuxt/module-builder": "^1.0.2",
-    "@nuxt/schema": "^4.0.3",
-    "@nuxt/test-utils": "^3.19.2",
+    "@nuxt/schema": "^4.2.1",
+    "@nuxt/test-utils": "^3.20.1",
     "@quasar/extras": "^1.17.0",
     "@types/node": "latest",
     "changelogen": "^0.6.2",
-    "eslint": "^9.33.0",
-    "nuxt": "^4.0.3",
-    "quasar": "^2.18.2",
-    "sass": "^1.90.0",
-    "typescript": "~5.9.2",
-    "vitest": "^3.2.4",
-    "vue-tsc": "^3.0.5"
+    "eslint": "^9.39.1",
+    "nuxt": "^4.2.1",
+    "quasar": "^2.18.5",
+    "sass": "^1.94.0",
+    "typescript": "~5.9.3",
+    "vitest": "^4.0.8",
+    "vue-tsc": "^3.1.3"
   },
   "author": {
     "email": "romeo@mendezfuentes.net",
@@ -72,5 +72,5 @@
     "quasar": "^2.16.2",
     "sass": "^1.69.5"
   },
-  "packageManager": "pnpm@10.12.1"
+  "packageManager": "pnpm@10.21.0+sha512.da3337267e400fdd3d479a6c68079ac6db01d8ca4f67572083e722775a796788a7a9956613749e000fac20d424b594f7a791a5f4e2e13581c5ef947f26968a40"
 }
